// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a style with CSS variable fontFamily: resolvedValue 1`] = `"mswft-ezpn2f u-r8-propKey"`;

exports[`renders a style with CSS variable fontFamily: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "textStyle": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "fontFamily": "var(--font-heading)",
                        "fontSize": null,
                        "fontStyle": [],
                        "fontWeight": null,
                        "letterSpacing": null,
                        "textTransform": [],
                      },
                    },
                  ],
                  "width": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "unit": "%",
                        "value": 100,
                      },
                    },
                  ],
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a style with fontFamily: resolvedValue 1`] = `"mswft-1rtsrrx u-r5-propKey"`;

exports[`renders a style with fontFamily: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "textStyle": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "fontFamily": "Arial",
                        "fontSize": null,
                        "fontStyle": [],
                        "fontWeight": null,
                        "letterSpacing": null,
                        "textTransform": [],
                      },
                    },
                  ],
                  "width": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "unit": "%",
                        "value": 100,
                      },
                    },
                  ],
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a style: resolvedValue 1`] = `"mswft-1cny9vj u-r2-propKey"`;

exports[`renders a style: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "margin": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "marginBottom": undefined,
                        "marginLeft": undefined,
                        "marginRight": undefined,
                        "marginTop": {
                          "unit": "px",
                          "value": 4,
                        },
                      },
                    },
                  ],
                  "width": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "unit": "%",
                        "value": 80,
                      },
                    },
                  ],
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;
